--- a/Tarot/app/src/main/AndroidManifest.xml
+++ b/Tarot/app/src/main/AndroidManifest.xml
@@ -10,10 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tarot">
         <activity
-            android:name=".CardsDetails"
+            android:name=".ui.activities.CardsDetailActivity"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
